{
  "version": 4,
  "terraform_version": "1.16.3",
  "serial": 16,
  "lineage": "5aed0920-92a9-3ed6-3474-6afc10faeb00",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-066c4849e6b3a1e3d",
            "arn": "arn:aws:ec2:ap-south-1:228210524459:instance/i-0cd7594da6e270533",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-practise-ec2-profile",
            "id": "i-0cd7594da6e270533",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-002f0d022af4dca9e"
              }
            ],
            "primary_network_interface_id": "eni-002f0d022af4dca9e",
            "private_dns": "ip-10-0-1-148.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.148",
            "public_dns": "ec2-65-1-109-152.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.109.152",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05d7e533180532122",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab1999d6d084b9aa",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "terraform-practise-ec2",
              "Project": "terraform-practise"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-practise-ec2",
              "Project": "terraform-practise"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5e5baf013b288a1"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228210524459",
            "id": "i-0cd7594da6e270533",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_ecr_repository.app",
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_iam_role_policy.ec2_ecr",
            "aws_iam_role_policy_attachment.ec2_ssm",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ssm_parameter.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228210524459:internet-gateway/igw-07555d599113ef613",
            "id": "igw-07555d599113ef613",
            "owner_id": "228210524459",
            "region": "ap-south-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "terraform-practise-igw",
              "Project": "terraform-practise"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-practise-igw",
              "Project": "terraform-practise"
            },
            "vpc_id": "vpc-0e609308d8edca789"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228210524459",
            "id": "igw-07555d599113ef613",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228210524459:route-table/rtb-066bb68a98696ff14",
            "id": "rtb-066bb68a98696ff14",
            "owner_id": "228210524459",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07555d599113ef613",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "terraform-practise-public-rt",
              "Project": "terraform-practise"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-practise-public-rt",
              "Project": "terraform-practise"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e609308d8edca789"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228210524459",
            "id": "rtb-066bb68a98696ff14",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062af1904c63a1af4",
            "region": "ap-south-1",
            "route_table_id": "rtb-066bb68a98696ff14",
            "subnet_id": "subnet-0ab1999d6d084b9aa"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228210524459",
            "id": "rtbassoc-062af1904c63a1af4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228210524459:security-group/sg-0c5e5baf013b288a1",
            "description": "Security group for Terraform practice application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5e5baf013b288a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask application",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "terraform-practise-sg",
            "name_prefix": "",
            "owner_id": "228210524459",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "terraform-practise-sg",
              "Project": "terraform-practise"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-practise-sg",
              "Project": "terraform-practise"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e609308d8edca789"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228210524459",
            "id": "sg-0c5e5baf013b288a1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228210524459:subnet/subnet-0ab1999d6d084b9aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab1999d6d084b9aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "228210524459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "terraform-practise-public-subnet",
              "Project": "terraform-practise"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-practise-public-subnet",
              "Project": "terraform-practise"
            },
            "vpc_id": "vpc-0e609308d8edca789"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228210524459",
            "id": "subnet-0ab1999d6d084b9aa",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:228210524459:vpc/vpc-0e609308d8edca789",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b5bf86684fa812bd",
            "default_route_table_id": "rtb-02c7f0120972e4001",
            "default_security_group_id": "sg-0b30cda6a284a9498",
            "dhcp_options_id": "dopt-007f75530ff406531",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e609308d8edca789",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02c7f0120972e4001",
            "owner_id": "228210524459",
            "region": "ap-south-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "terraform-practise-vpc",
              "Project": "terraform-practise"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "terraform-practise-vpc",
              "Project": "terraform-practise"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228210524459",
            "id": "vpc-0e609308d8edca789",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}